--- a/src/mapzen.whosonfirst.yesnofix.css
+++ b/src/mapzen.whosonfirst.yesnofix.css
@@ -1,5 +1,16 @@
 .yesnofix-asserted {
-    background-color:yellow !important;
+}
+
+.yesnofix-asserted-yes {
+    background-color:#98fb98 !important;
+}
+
+.yesnofix-asserted-no {
+    background-color:#db7093 !important;
+}
+
+.yesnofix-asserted-fix {
+    background-color:#ffffb2 !important;
 }
 
 /* yesnofix me please */
@@ -60,19 +71,6 @@
     font-family:monospace;
 }
 
-#yesnofix-toggle {
-    display: none;
-    font-family:monospace;
-}
-
-#yesnofix-toggle-raw {
-    display: none;
-}
-
-#yesnofix-toggle-pretty {
-    display: none;
-}
-
 .yesnofix-assert {
     margin-top:.5em;
     margin-bottom:1em;
@@ -106,4 +104,52 @@
 .yesnofix-assert-cancel:hover {
     background-color:#666;
     color:#fff;
+}
+
+#yesnofix-report {
+
+}
+
+#yesnofix-report-buttons button {
+    border: none;
+    font-size: small;
+    padding:.4em;
+    padding-left:.6em;
+    padding-right:.6em;
+    float:left;
+    margin-right:.5em;
+    background-color:#A4DDED;
+}
+
+#yesnofix-report-buttons button:hover {
+    background-color:#72A0C1;
+    color:#fff;
+}
+
+#yesnofix-report-show {
+    display:none;
+}
+
+#yesnofix-report-hide {
+    display:none;
+}
+
+#yesnofix-report-submit {
+    display:none;
+    background-color:#72A0C1 !important;
+}
+
+#yesnofix-report-submit:hover {
+    color:#fff;
+}
+
+#yesnofix-report-body {
+    display:none;
+    margin-top:.5em;
+    margin-top:.3em;
+    border:none;
+    padding:1em;
+    max-height: 100px;
+    overflow: scroll;
+    background-color:#A4DDED;
 }
