--- a/src/mapzen.whosonfirst.yesnofix.css
+++ b/src/mapzen.whosonfirst.yesnofix.css
@@ -181,22 +181,28 @@
     z-index: 2000 !important;	/* because the leaflet attribution widget is z-index 1000.... */
     border:8px solid #333;
     background-color: #fff;
-    width: 50%;
-    min-height:50%;
-    max-height:50%;    
+    min-width: 70%;
+    max-width: 70%;
+    max-height:450px;    
+    max-height:450px;    
     padding: 1.5em;
     position: fixed;
     top: 25%;
-    left:25%;
+    left:15%;
 
+    font-size:.9em;
+    font-family: sans-serif !important;
 }
 
 #yesnofix-about-text {
 
     position: relative;
-    height: 300px;
+    min-height: 300px;
+    max-height:300px;
     overflow: scroll !important;
     padding-right:6em;
+    padding-bottom:1em !important;
+    font-size:.95em;
 }
 
 #yesnofix-about-close {
@@ -223,15 +229,19 @@
     position:absolute;
     bottom: 2em;
     width:90%;
+    border-top: 1px dotted #ccc;
+    padding-top:1em;
 }
 
 #yesnofix-about-cancel-button {
     border: solid thin;
     padding: .5em;
+    background-color: #A4DDED;
 }
 
 #yesnofix-about-cancel-button:hover {
-    background-color: #999;
+    color: #fff;
+    border: 1px solid #000;
 }
 
 #yesnofix-about-submit-button {
@@ -239,8 +249,10 @@
     padding: .5em;
     float: right;
     margin-left:2em;
+    background-color:#72A0C1;
 }
 
 #yesnofix-about-submit-button:hover {
-    background-color: #999;
+    color: #fff;
+    border: 1px solid #000;
 }
